--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
+    "dom": "^0.0.3",
     "lucide-react": "^0.508.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-feather": "^2.0.10",
     "react-router-dom": "^7.5.3",
+    "router": "^2.2.0",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
