--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
     "dom": "^0.0.3",
+    "express": "^5.1.0",
     "lucide-react": "^0.508.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
