--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
+    "axios": "^1.11.0",
     "dom": "^0.0.3",
     "express": "^5.1.0",
     "lucide-react": "^0.508.0",
