--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,11 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    
+
+    "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview"
   },
   "keywords": [],
   "author": "",
